[workspace]
members = [
    "packages/api",
    "packages/main-ui",
    "packages/models",
    "packages/build-ui",
]
exclude = ["deps"]
resolver = "2"

[workspace.package]
authors = ["Biyard"]
description = "d.AGIT: Digital Assets Guardianship & Interchange Terminal"
documentation = "https://dagit.club"
edition = "2024"
repository = "https://github.com/biyard/dagit"
license = "Apache-2.0"

[workspace.dependencies]
# dioxus = { version = "0.6.3" }
dioxus = { version = "0.6.3", git = "https://github.com/hackartists/dioxus.git" }
dioxus-web = { version = "0.6.3", git = "https://github.com/hackartists/dioxus.git" }

dioxus-logger = { version = "0.6.2" }
tracing = { version = "0.1.41" }
serde = { version = "1.0.218" }
reqwest = { version = "0.12.12" }
serde_json = { version = "1.0.139" }
serde_urlencoded = { version = "0.7.1" }
#rust-sdk
by-axum = { path = "deps/rust-sdk/packages/by-axum" }
by-components = { path = "deps/rust-sdk/packages/by-components" }
by-macros = { path = "deps/rust-sdk/packages/by-macros" }
by-types = { path = "deps/rust-sdk/packages/by-types" }
dioxus-translate = { path = "deps/rust-sdk/packages/dioxus-translate", features = [
    "ko",
] }
dioxus-aws = { path = "deps/rust-sdk/packages/dioxus-aws" }
rest-api = { path = "deps/rust-sdk/packages/rest-api" }
dioxus-popup = { path = "./deps/rust-sdk/packages/dioxus-popup" }
btracing = { path = "./deps/rust-sdk/packages/btracing" }


sqlx = { version = "0.8.3", features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "time",
    "bigdecimal",
] }

models = { path = "packages/models" }
#FIXME: `rest-api` crate has `getrandom` dependency, but it's listed here
getrandom = { version = "0.2", features = ["js"] }


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
