[workspace]
members = [
    "packages/api",
    "packages/main-ui",
    "packages/common",
    "packages/build-ui",
]
exclude = ["deps"]
resolver = "2"

[workspace.package]
authors = ["Biyard"]
description = "d.AGIT: Digital Assets Guardianship & Interchange Terminal"
documentation = "https://dagit.club"
edition = "2024"
repository = "https://github.com/biyard/dagit"
license = "Apache-2.0"

[workspace.dependencies]

bdk = { path = "deps/rust-sdk/packages/bdk" }

serde = { version = "1.0.218" }
reqwest = { version = "0.12.12" }
serde_json = { version = "1.0.139" }
serde_urlencoded = { version = "0.7.1" }
chrono = { version = "0.4.40" }

dioxus-oauth = { path = "./deps/rust-sdk/packages/dioxus-oauth" }
google-wallet = { path = "./deps/rust-sdk/packages/google-wallet" }
rest-api = { path = "./deps/rust-sdk/packages/rest-api" }

sqlx = { version = "0.8.3", features = [
    "sqlite",
    "postgres",
    "runtime-tokio",
    "time",
] }

common = { path = "packages/common" }
#FIXME: `rest-api` crate has `getrandom` dependency, but it's listed here
getrandom = { version = "0.2", features = ["js"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
